# aethelgard

./: .env.sample  .gitignore  Dockerfile  Dockerfile.node  README.md  docker-compose-nodes.yml  docker-compose.yml  pyproject.toml  requirements-node.txt  requirements-server.txt  requirements.txt
aethelgard/: __init__.py  node.py  orchestrator.py
aethelgard/brokers/: in_memory.py  redis_broker.py
aethelgard/core/: __init__.py  broker.py  config.py  llm_middleware.py  smartfolder.py  transport.py
aethelgard/firewall/: litellm_firewall.py
aethelgard/transports/: fastapi_server.py  httpx_client.py
dataset/: LICENSE  readme.md
dataset/Hospital_A/: patient00002.json  patient00008.json  patient00011.json  patient00012.json  patient00018.json  patient00021.json  patient00022.json  patient00023.json  patient00024.json  patient00027.json  patient00029.json  patient00032.json  patient00036.json  patient00037.json  patient00038.json  (+27 more)
docs/: medgemma_competition_description.txt  writeup_final.txt
notebooks/: Dataset_Generator_Small.ipynb  LDP_and_Empirical_Noise_Parameter_Selection_Analysis.ipynb
pipeline/: generate_embeddings.py  generate_pipeline.py  postprocess_batch.py  preprocess_batch.py
profiles/: node_a.env  node_b.env  server.env
samples/: 01_local_simulation.py  02_production_server.py  03_hospital_node.py  app.py  demo_app.py  demo_app_2.py  test_integration.py
scripts/: cleanup.sh  configs_gcp.txt  deploy_infra.sh  run_batch_gcp.sh
templates/: generate_patient.j2
tests/: test_in_memory_broker.py
vector/: file_state_A.db  file_state_B.db
(+43 files in other folders)
